# Nebular

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  fix_uv_python.sh  pyproject.toml  pytest.ini  test_signalr.py  update_bots.sh
.github/workflow/: docker-build.yml
Agents/: autogen_groupchat.py
Design/: Bot Orchestrator.md  Opera Integration.md  wrap.md  详细设计 -  BotManager System.md  详细设计V2.md  详细设计V3.md
Design/Graph/: SignalR Connector.md  V3.md
Opera/FastAPI/: WebAPI.md  main.py  models.py  run_fastapi.sh  webapi.py
Opera/Signalr/: crew_process_manager.py  dialogues_to_tasks.py  example.py  opera_message_processor.py  opera_message_router.py  opera_signalr_client.py
Opera/core/: api_response_parser.py  bot_response_parser.py  code_monkey.py  crew_process.py  dialogue_utils.py  intent_mind.py  logger_config.py  task_queue.py  task_utils.py
Opera/signalr_client/: opera_signalr_client.py
Opera_API/: SignalR.md  WebAPI.md
Opera_API/FastAPI/: models.py  webapi.py
Opera_API/Signalr/: example.py  opera_signalr_client.py
ai_core/: crew.py
ai_core/config/: config.py
ai_core/configs/: base_agents.py  config.py
ai_core/examples/: bot_tool_example.py  dialogue_tool_example.py  opera_tool_example.py  property_tool_example.py  resource_tool_example.py  staff_invitation_tool_example.py  staff_tool_example.py  stage_tool_example.py  temp_file_tool_example.py
ai_core/tests/: bot_tool_unitTest.py
ai_core/tools/: base_api_tool.py  bot_api_tool.py  create_crews_tool.py  dialogue_api_tool.py  opera_api_tool.py  property_api_tool.py  resource_api_tool.py  staff_api_tool.py  staff_invitation_api_tool.py  stage_api_tool.py  temp_file_api_tool.py  template_tool.py
bot_manager/: __init__.py  config.py
bot_manager/adapters/: __init__.py  aider_adapter.py  autogen_adapter.py
bot_manager/core/: conversation.py  factory.py  interfaces.py
bot_manager/state_management/: managers.py
docs/design/: Bot Factory.md  General Design.md  Opera API.md  SignalR Handler.md  概要设计 - Bot Manager System.md
docs/playground/: test_call_url_with_cache.py  url_service.py  (+4 more)
examples/: bot_tool_example.py  create_code_executor.py  opera_tool_example.py  usage.py
latest_ai_development/: crew.py  main.py
playground/: AOAI_CONFIG_LIST.json  avatar.py  coffee_pulp.py  gradio_app.py  openai_snippet.py  promptflow.py  promptflow_autogen.py  quickstart.py  startup.py
tests/: conftest.py
(+241 files in other folders)
