[tool.poetry]
name = "poetry-nebular"
version = "0.1.0"
description = "ai assistants playground"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
fastapi = "^0.115.2"
gradio = "^5.1.0"
autogen = "^0.3.1"
flaml = {extras = ["automl"], version = "^2.3.1"}
pysignalr = "^1.0.0"


[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
priority = "primary"


[tool.poetry.group.dev.dependencies]
promptflow-tracing = "^1.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

