[tool.poetry]
name = "poetry-nebular"
version = "0.1.0"
description = "ai assistants playground"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
fastapi = "^0.115.2"
pysignalr = "^1.0.0"
loguru = "^0.7.2"
uvicorn = "^0.32.0"
paramiko = "^3.5.0"
backoff = "^2.2.1"
diskcache = "^5.6.3"

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
priority = "primary"



[tool.poetry.group.dev.dependencies]
promptflow = "^1.16.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
ipykernel = "^6.29.5"


[tool.poetry.group.crewai.dependencies]
crewai = "^0.98.0"
crewai-tools = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



